# meal-metrics

./: .env.example  README.md  pyproject.toml  render.yaml  requirements.txt
api/: main.py  schemas.py
api/core/: auth.py  dependencies.py
api/db/: food_data.py  models.py
api/routers/: __init__.py  api.py  meals.py  nutrition.py  telegram_bot.py  users.py  webhook.py
api/schemas/: __init__.py  meal.py  responses.py  user.py  webhook.py
api/utils/: utils.py
app/api/endpoints/: nutrition.py  webhook.py
frontend/: index.html
frontend/css/: styles.css
frontend/js/: api.js  app.js  utils.js
frontend/pages/: admin.html  dashboard.html  login.html  register.html
